# hmr

./: CMakeLists.txt  README.md  requirements.txt
include/hmr/: adaptor_base.hpp  beginend.hpp  for_each.hpp  ints.hpp  iota.hpp  iterator.hpp  iterator_range.hpp  join.hpp  reverse.hpp  transform.hpp
include/hmr/detail/: is_partial.hpp  iterator_iterator.hpp  join.hpp  operators.hpp
test/: for_each.cpp  ints.cpp  iota.cpp  iterator.cpp  join.cpp  reverse.cpp  test.hpp  transform.cpp
